Fix orchestrator and frontend
